--- a/css/grayson-iaac.webflow.css
+++ b/css/grayson-iaac.webflow.css
@@ -109,9 +109,10 @@ h2 {
 }
 
 h3 {
+  color: var(--white);
   margin-top: 0;
   margin-bottom: 0;
-  font-size: 2.5rem;
+  font-size: 1.75rem;
   font-weight: 700;
   line-height: 1.2;
 }
@@ -141,6 +142,7 @@ h6 {
 }
 
 p {
+  color: var(--white);
   margin-bottom: 0;
 }
 
@@ -457,6 +459,7 @@ figcaption {
 }
 
 .margin-bottom.margin-small {
+  width: 100%;
   position: relative;
 }
 
@@ -1249,8 +1252,7 @@ figcaption {
 }
 
 .text-rich-text figcaption {
-  border-left: 2px solid var(--white);
-  text-align: left;
+  text-align: center;
   margin-top: .5rem;
   padding-left: .5rem;
   font-size: .875rem;
@@ -1258,6 +1260,10 @@ figcaption {
 
 .text-rich-text img {
   border-radius: 8px;
+}
+
+.text-rich-text._1 {
+  margin-top: 2rem;
 }
 
 .icon-height-medium {
@@ -1702,6 +1708,10 @@ figcaption {
   padding-bottom: 7rem;
 }
 
+.padding-section-large._1 {
+  padding-bottom: 0;
+}
+
 .layout405_tabs-menu {
   grid-column-gap: 1.5rem;
   grid-row-gap: 1.5rem;
@@ -1729,7 +1739,7 @@ figcaption {
 
 .layout405_component {
   flex-direction: column;
-  align-items: stretch;
+  align-items: center;
   display: flex;
 }
 
@@ -1795,6 +1805,184 @@ figcaption {
 
 .image-3 {
   width: 100%;
+}
+
+.grid-2 {
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  grid-template-rows: auto auto auto auto auto auto;
+}
+
+.div-block-5 {
+  border: 1px solid #fff;
+  border-radius: 1px;
+  padding: 1rem;
+}
+
+.observation-box {
+  background-color: rgba(140, 174, 112, .25);
+  border-radius: 8px;
+  margin-top: 2rem;
+  padding: 1rem;
+}
+
+.rich-text-block {
+  margin-top: 2rem;
+}
+
+.rich-text-block li {
+  color: var(--white);
+}
+
+.div-block-6 {
+  width: 100%;
+}
+
+.block-copy {
+  width: 100%;
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  grid-template-rows: auto auto auto;
+  grid-template-columns: .5fr .5fr;
+  grid-auto-columns: 1fr;
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+}
+
+.separator {
+  width: 100%;
+  height: 1px;
+  background-color: #fff;
+  margin-top: 2rem;
+}
+
+.gallery9_lightbox-link {
+  width: 100%;
+  height: 100%;
+}
+
+.padding-section-large-2 {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+}
+
+.gallery9_component {
+  grid-column-gap: 2rem;
+  grid-row-gap: 2rem;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr;
+  grid-auto-columns: 1fr;
+  display: grid;
+}
+
+.gallery9_row {
+  grid-column-gap: 2rem;
+  grid-row-gap: 2rem;
+  grid-template-rows: auto;
+  grid-template-columns: 2fr 1fr 1fr;
+}
+
+.text-size-medium-2 {
+  font-size: 1.125rem;
+}
+
+.gallery9_image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+  position: absolute;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+}
+
+.gallery9_image-wrapper {
+  width: 100%;
+  height: 100%;
+  padding-top: 100%;
+  position: relative;
+}
+
+.gallery24_image-wrapper {
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.gallery24_component {
+  height: 770vh;
+}
+
+.gallery24_horizontal-scroll-wrapper {
+  width: 100vw;
+  height: 100vh;
+  max-width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding-left: 5%;
+  padding-right: 5%;
+  display: flex;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  overflow: hidden;
+}
+
+.gallery24_horizontal-scroll-content {
+  width: 2700vh;
+  grid-column-gap: 2rem;
+  align-items: center;
+  display: flex;
+}
+
+.gallery24_image {
+  width: 80vw;
+  height: 80vh;
+  object-fit: contain;
+}
+
+.gallery24_component-2 {
+  height: 400vh;
+}
+
+.gallery24_horizontal-scroll-content-2 {
+  width: 400vh;
+  grid-column-gap: 2rem;
+  align-items: center;
+  display: flex;
+}
+
+.gallery10_lightbox-link {
+  width: 100%;
+  margin-bottom: 2rem;
+}
+
+.padding-section-large-3 {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+}
+
+.gallery10_image {
+  border-radius: 4px;
+}
+
+.gallery10_component {
+  column-count: 3;
+  column-gap: 2rem;
+}
+
+.html-embed {
+  width: 100%;
+}
+
+.card-p {
+  height: 5rem;
 }
 
 @media screen and (max-width: 991px) {
@@ -2119,6 +2307,38 @@ figcaption {
     width: 100%;
     height: 25rem;
   }
+
+  .block-copy {
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .padding-section-large-2 {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+
+  .gallery24_horizontal-scroll-content {
+    width: 300vh;
+  }
+
+  .gallery24_image {
+    max-height: 40rem;
+  }
+
+  .section_gallery24 {
+    display: none;
+  }
+
+  .gallery24_horizontal-scroll-content-2 {
+    width: 300vh;
+  }
+
+  .padding-section-large-3 {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -2434,6 +2654,61 @@ figcaption {
   .footer7_credit-text {
     margin-top: 2rem;
   }
+
+  .padding-section-large-2 {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+
+  .gallery9_component {
+    grid-column-gap: 1.5rem;
+    grid-row-gap: 1.5rem;
+    column-count: 1;
+  }
+
+  .gallery9_row {
+    grid-column-gap: 1.5rem;
+    grid-row-gap: 1.5rem;
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .text-size-medium-2 {
+    font-size: 1rem;
+  }
+
+  .gallery24_horizontal-scroll-wrapper {
+    margin-top: -10vh;
+  }
+
+  .gallery24_horizontal-scroll-content {
+    width: 200vh;
+    grid-column-gap: 1.5rem;
+  }
+
+  .gallery24_image {
+    width: 90vw;
+    max-height: 30rem;
+  }
+
+  .gallery24_horizontal-scroll-content-2 {
+    width: 200vh;
+    grid-column-gap: 1.5rem;
+  }
+
+  .gallery10_lightbox-link {
+    margin-bottom: 1.5rem;
+  }
+
+  .padding-section-large-3 {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+
+  .gallery10_component {
+    column-count: 1;
+    column-gap: 1.5rem;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -2524,6 +2799,18 @@ figcaption {
 
   .layout405_tabs-menu {
     flex-wrap: wrap;
+  }
+
+  .gallery24_horizontal-scroll-content {
+    width: 150vh;
+  }
+
+  .gallery24_image {
+    max-height: 25rem;
+  }
+
+  .gallery24_horizontal-scroll-content-2 {
+    width: 150vh;
   }
 }
 
@@ -3902,7 +4189,24 @@ figcaption {
   grid-area: span 2 / span 2 / span 2 / span 2;
 }
 
-#w-node-_93102ac1-8e0f-652a-5668-24d9d3e88a53-1abe6fcf, #w-node-_5ce508ce-a0e8-69fd-c25a-e331632d7baa-1abe6fcf, #w-node-_52bf7c6d-f526-04c4-208e-780c0db1dcca-1abe6fcf {
+#w-node-_93102ac1-8e0f-652a-5668-24d9d3e88a53-1abe6fcf, #w-node-_5ce508ce-a0e8-69fd-c25a-e331632d7baa-1abe6fcf, #w-node-_52bf7c6d-f526-04c4-208e-780c0db1dcca-1abe6fcf, #w-node-_325732be-2b17-560f-a7c4-84511a6602ad-1abe6fcf {
+  grid-area: span 1 / span 1 / span 1 / span 1;
+}
+
+#w-node-_5a1caa10-a31a-d1f6-7d34-d8632e3dfb63-efaeb725 {
+  grid-area: span 1 / span 2 / span 1 / span 2;
+}
+
+#w-node-_93102ac1-8e0f-652a-5668-24d9d3e88a53-efaeb725, #w-node-_32ff5550-999f-78e7-9e28-38591a9dc64b-efaeb725 {
+  grid-area: span 1 / span 1 / span 1 / span 1;
+}
+
+#w-node-_25f67ec8-cfea-d8b6-aa41-27752a9fba0e-efaeb725, #w-node-_840932fd-42f5-c964-37f0-afddbe6c5dee-efaeb725, #w-node-_2e5b4969-bd74-4690-034f-83471fc9f981-efaeb725, #w-node-_80b08a9f-436b-6990-a3ea-afae3e3b51fc-efaeb725, #w-node-_76d6fd16-30e7-64e8-366b-ebe518167698-efaeb725, #w-node-b34cdfe0-700c-920f-e841-d1660a4aa0a4-efaeb725, #w-node-_427bb498-87df-2d78-d3a1-865ce9d3285c-efaeb725, #w-node-_07d7cebd-84b1-bc77-2439-d52c89c91ba9-efaeb725, #w-node-_45c9fe60-cd29-1ed1-a5b8-f937c4c973f6-efaeb725, #w-node-_059782f2-04dd-e6f1-094b-56875ea80214-efaeb725, #w-node-aab045f3-0e69-1ed3-e0f3-59ed3f36ad0f-efaeb725 {
+  grid-area: span 1 / span 1 / span 1 / span 1;
+  align-self: stretch;
+}
+
+#w-node-b2ec4318-3bbb-51c4-67f9-94170b7180b3-efaeb725 {
   grid-area: span 1 / span 1 / span 1 / span 1;
 }
 
@@ -3915,6 +4219,15 @@ figcaption {
 @media screen and (max-width: 479px) {
   #w-node-_0b842f32-36bb-cb2f-de79-f13d34b88780-34b8877a {
     grid-area: span 1 / span 1 / span 1 / span 1;
+  }
+
+  #w-node-_32ff5550-999f-78e7-9e28-38591a9dc64b-efaeb725 {
+    grid-area: span 1 / span 2 / span 1 / span 2;
+  }
+
+  #w-node-_25f67ec8-cfea-d8b6-aa41-27752a9fba0e-efaeb725, #w-node-_840932fd-42f5-c964-37f0-afddbe6c5dee-efaeb725, #w-node-_2e5b4969-bd74-4690-034f-83471fc9f981-efaeb725, #w-node-_80b08a9f-436b-6990-a3ea-afae3e3b51fc-efaeb725, #w-node-_76d6fd16-30e7-64e8-366b-ebe518167698-efaeb725, #w-node-b34cdfe0-700c-920f-e841-d1660a4aa0a4-efaeb725, #w-node-_427bb498-87df-2d78-d3a1-865ce9d3285c-efaeb725, #w-node-_07d7cebd-84b1-bc77-2439-d52c89c91ba9-efaeb725, #w-node-_45c9fe60-cd29-1ed1-a5b8-f937c4c973f6-efaeb725, #w-node-_059782f2-04dd-e6f1-094b-56875ea80214-efaeb725, #w-node-aab045f3-0e69-1ed3-e0f3-59ed3f36ad0f-efaeb725 {
+    grid-area: span 1 / span 2 / span 1 / span 2;
+    align-self: stretch;
   }
 }
 
